Add bs components

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-#offCanvas {
+#offCanvas, #offCanvasRight {
     background-color: #fff;
     z-index: 1080;
 }
